# KUAVTE

./: README.md
unity/kuavte-python/: kuavte.py
unity/kuavte-unity/: .gitignore
unity/kuavte-unity-fdm-model/: .gitignore  CMakeLists.txt  Init.bat  KuavteFdmModel.cpp  KuavteFdmModel.h  Readme.txt
unity/kuavte-unity-fdm-model/powershell/: Init.ps1
unity/kuavte-unity/Assets/: .gitignore  OutdoorsScene.unity
unity/kuavte-unity/Assets/JumperTPRO/: JumperTPRO.cs  JumperTPRO.inputactions
unity/kuavte-unity/Assets/drone/model/: drone-model.fbx
unity/kuavte-unity/Assets/drone/model/materials/: Material.001.mat  Material.002.mat  Material.003.mat  Material.004.mat  Material.005.mat  pale.mat
unity/kuavte-unity/Assets/gridbox-textures/: gridbox-blue1.mat  gridbox-blue2.mat  gridbox-blue3.mat  gridbox-brown.mat  gridbox-cyan.mat  gridbox-green1.mat  gridbox-green2.mat  gridbox-grey1.mat  gridbox-grey2.mat  gridbox-grey3.mat  gridbox-grey4.mat  gridbox-orange.mat  gridbox-purple.mat  gridbox-red.mat  gridbox-white.mat  gridbox-yellow.mat
unity/kuavte-unity/Assets/materials/target-material/: targe-material.mat  target-corner-material.mat
unity/kuavte-unity/Assets/scripts/: DroneWatchCamera.cs  FdmController.cs  GymInputReceiver.cs  GymOutputSender.cs  PluginLoader.cs  SimulationController.cs  TargetBehavior.cs  UdpReceiver.cs  Utils.cs
unity/kuavte-unity/ProjectSettings/: ProjectSettings.asset
